--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Vidhi Soni</a></h1>
+					<span class="image avatar"><img src="images/vidhi.jpg" alt="" /></span>
+					<h1 id="logo"><a href="index.html">Vidhi Soni</a></h1>
 					<p>Game Programmer</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Have Done</a></li>
+						<li><a href="#two">Skills</a></li>
 						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
@@ -50,16 +50,16 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hi!</h2>
-										<p>Welcome to my portfolio website.</p>
+										<p>Welcome to my website.</p>
 									</header>
-									<p>I am passionate about games, and programming. I am a recent graduate from <a href="https://www.digipen.edu/" target="_blank">DigiPen Institute of Technology</a> with a degree in MSCS.</p>
+									<p>I am passionate about games and programming. I am a recent graduate from <a href="https://www.digipen.edu/" target="_blank">DigiPen Institute of Technology</a> with a degree in MSCS.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Have Done</h3>
+									<h3>Skills</h3>
 									<!--<ul class="feature-icons">
 										 <li class="icon solid fa-cubes">Stack small boxes</li>
 										<li class="icon solid fa-book">Read books and stuff</li>
@@ -109,7 +109,7 @@
 											<div class="inner">
 												<h4>ShipIt!</h4>
 												<p>
-												This is a 3D Simulation Game which I have worked on during my master's study.<br/>
+												This is a 3D Simulation Game which I have worked on during my master's.<br/>
 												<a href="https://github.com/vidhisoni/3D-Game-Project" target="_blank">Here</a> is GitHub link of the source code.<br/>
 												</p>
 												<a class="button small primary" href="ShipIt.html">More</a>
@@ -132,7 +132,7 @@
 											<div class="inner">
 												<h4>Journey of Graphics</h4>
 												<p>
-												I have worked on Graphics Programming, various Rendering Techniques during my master's study.<br/>
+												I have worked on various Rendering Techniques during my master's study.<br/>
 												Ex., Bloom, Deferred Rendering, Ambient Occlusion
 												</p>
 												<a class="button small primary" href="Graphics.html">More</a>
