--- a/Graphics.html
+++ b/Graphics.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Vidhi Soni</a></h1>
+					<span class="image avatar"><img src="images/vidhi.jpg" alt="" /></span>
+					<h1 id="logo"><a href="index.html">Vidhi Soni</a></h1>
 					<p>Game Programmer</p>
 				</header>
 				<nav id="nav">
@@ -57,7 +57,7 @@
 									<span class="image fit"><img src="images/bloom1.png" alt="" /></span>
 								</div>
 								<div class="container">
-									<h3>Deferred</h3>
+									<h3>Deferred Shading</h3>
 									<span class="image fit"><img src="images/def.png" alt="" /></span>
 									<span class="image fit"><img src="images/deferred.png" alt="" /></span>
 								</div>
