--- a/RayTracing.html
+++ b/RayTracing.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Vidhi Soni</a></h1>
+					<span class="image avatar"><img src="images/vidhi.jpg" alt="" /></span>
+					<h1 id="logo"><a href="index.html">Vidhi Soni</a></h1>
 					<p>Game Programmer</p>
 				</header>
 				<nav id="nav">
